--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       /*background: #0f0;*/
     /*}*/
     section ul li dl dt img {
+      transition: 1s;
       width: 100%;
       height: 100%;
       box-shadow: 0 0 4px 2px #ccc;
@@ -320,8 +321,8 @@
       });
     }
 
+    //懒加载
     (() => {
-      //懒加载
       const picGoods = listsGoods.querySelectorAll('.picGoods');
       window.addEventListener('scroll', lazyLoading);
 
