--- a/index.html
+++ b/index.html
@@ -11,9 +11,38 @@
     section .banner {
       margin: auto;
       height: calc(100vh - 40px);
-      box-shadow: 1px 2px 1px 1px #ccc;
+      transition: 2s;
+      box-shadow: 2px 1px 2px 2px #ddd;
+      /*background: lightsalmon;*/
+    }
+    section .banner0 {
+      background: rgba(33,163,213,.4);
+      background-image: linear-gradient(#fff 1px, transparent 0),
+                        linear-gradient(90deg, #fff 1px, transparent 0);
+      background-size: 30px 30px;
+    }
+    section .banner1 {
+      background: rgba(255,255,255,.4);
+      background-image: linear-gradient(rgba(200,0,0,.2) 50%, transparent 0),
+                        linear-gradient(90deg, rgba(200,0,0,.2) 50%, transparent 0);
+      background-size: 30px 30px;
+    }
+    section .banner2 {
+      background: rgba(240,240,240,.4);
+      background-image: radial-gradient(rgba(200,200,200,.4) 30%, transparent 0);
+      background-size: 40px 40px;
+    }
+    section .banner3 {
+      background: linear-gradient(rgba(200,200,200,.2) 50%, transparent),
+                  linear-gradient(90deg, rgba(200,200,200,.2) 50%, transparent);
+      /*background-size: 10px 10px;*/
       background: lightsalmon;
     }
+    /*section .banner img {*/
+      /*width: 100%;*/
+      /*height: 100%;*/
+      /*transition: 2s;*/
+    /*}*/
     section ul {
       margin: auto;
       padding: 2vw 0;
@@ -40,6 +69,9 @@
       position: relative;
       padding: .4vw;
       height: 20vw;
+      overflow: hidden;
+      /*transition: 1s;*/
+      /*opacity: .8;*/
       background: #eee;
     }
     /*section ul li dl dt:hover {*/
@@ -52,6 +84,11 @@
       width: 100%;
       height: 100%;
       box-shadow: 0 0 4px 2px #ccc;
+    }
+    section ul li dl dt img.picGoods-min:hover {
+      width: 110%;
+      height: 110%;
+      transform: translateX(-5%);
     }
     section ul li dl dt span {
       /*z-index: 1;*/
@@ -150,32 +187,59 @@
       /*background: rgba(145,181,77,1);*/
       background: rgba(33,163,213,.6);
     }
+
+    #back-top {
+      z-index: 2;
+      position: fixed;
+      right: 4vw;
+      bottom: 40px;
+      display: none;
+      width: 0;
+      height: 0;
+      border-width: 0 1.6vw 1.6vw 1.6vw;
+      border-style: solid;
+      border-color: transparent transparent rgba(33,163,213,.6) transparent;
+      /*border-color: transparent transparent rgba(135,186,232, .8) transparent;*/
+    }
+    #timeLine {
+      z-index: 2;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: .2vw;
+      /*background: linear-gradient(90deg, rgba(33,163,213,.6) 50%, transparent 50%);*/
+    }
   </style>
 </head>
 <body>
-  <div class="register" style="display: none">
-    <i>+</i>
-    <b>or&nbsp;登录</b>
-    <input type="text" placeholder="邮箱" />
-    <input type="password" placeholder="密码" />
-    <a class="get-btn register-sure">注册</a>
-  </div>
-  <div class="login register">
-    <i>+</i>
-    <b>else&nbsp;注册</b>
-    <input type="text" placeholder="邮箱" />
-    <input type="password" placeholder="密码" />
-    <a class="get-btn login-sure">登录</a>
+  <div id="timeLine"></div>
+  <a href="#" id="back-top"></a>
+  <div>
+    <div class="register" style="display: none">
+      <i>+</i>
+      <b>or&nbsp;登录</b>
+      <input type="text" placeholder="邮箱" />
+      <input type="password" placeholder="密码" />
+      <a class="get-btn register-sure">注册</a>
+    </div>
+    <div class="login register">
+      <i>+</i>
+      <b>else&nbsp;注册</b>
+      <input type="text" placeholder="邮箱" />
+      <input type="password" placeholder="密码" />
+      <a class="get-btn login-sure">登录</a>
+    </div>
   </div>
   <div id="header-wrap">
     <header class="autoWidth">
       <ul class="moreNav">
-        <li><a href="html/cart.html">购物袋&nbsp;<i>(2)</i></a></li>
+        <li><a href="html/cart.html">购物袋&nbsp;<i class="cart-num"></i></a></li>
         <li><a href="html/order.html">订单</a></li>
-        <li><a href="#" id="account">账户</a></li>
+        <li><a href="#" id="account">登录</a></li>
       </ul>
       <a href="#" id="logo">novatex</a>
-      <b class="cart"></b>
+      <b class="cart"><i></i></b>
     </header>
   </div>
   <section>
@@ -203,8 +267,9 @@
   <script src="js/common.js"></script>
   <script>
 
-    dataCarts = JSON.parse(localStorage.getItem('dataCarts')) || dataCarts;
     dataUsers = JSON.parse(localStorage.getItem('dataUsers')) || dataUsers;
+    dataCarts = JSON.parse(localStorage.getItem('dataCarts')) || dataCarts;
+    isCart(dataCarts);
 //    console.log(dataUsers);
     const section = document.querySelector('section');
     const listsGoods = section.querySelector('ul');
@@ -222,13 +287,13 @@
       //登录,退出
       account.addEventListener('click', function () {
         const text = account.innerText;
-        if (text === '账户') {
+        if (text === '登录') {
           login.style.display = 'block';
         } else if (text === '退出') {
           for (let e of dataUsers) {
             if (e.isLogin) {
               e.isLogin = false;
-              account.innerText = '账户';
+              account.innerText = '登录';
               localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
               break;
             }
@@ -301,7 +366,7 @@
         str += `
           <li>
           <dl>
-            <dt><img _src="${e.pic_min}" class="picGoods-min" /><span><img src="${e.pic}" class="picGoods" /></span></dt>
+            <dt><img _src="${e.pic_min}" class="picGoods-min" /><span><img _src="${e.pic}" class="picGoods" /></span></dt>
             <dd>
               <em style="display: none">${e.id}</em>
               <span>${e.name}</span>
@@ -320,6 +385,7 @@
       cartAdds.forEach(e => {
         e.addEventListener('click', function () {
           const id = +e.parentNode.firstElementChild.innerText;
+          const path = `../`;
           let sData = [];
           let isInclude = false;
           dataGoods.forEach(e => {
@@ -335,8 +401,10 @@
           });
           if (!isInclude) {
             sData.num = 1;
-            dataCarts.push(sData);
+            sData.pic_min = path + sData.pic_min;
+            dataCarts.unshift(sData);
           }
+          isCart(dataCarts);
           localStorage.setItem('dataCarts', JSON.stringify(dataCarts));
         });
       });
@@ -345,9 +413,14 @@
     //懒加载
     (() => {
       const picGoodsMin = listsGoods.querySelectorAll('.picGoods-min');
-      window.addEventListener('scroll', lazyLoading);
-      function lazyLoading() {
-        picGoodsMin.forEach(e => {
+      const picGoods = listsGoods.querySelectorAll('.picGoods');
+      let Lazyloading = function () {
+        lazyLoading(picGoodsMin);
+        lazyLoading(picGoods);
+      };
+      window.addEventListener('scroll', Lazyloading);
+      function lazyLoading(eles) {
+        eles.forEach(e => {
           if (e.getBoundingClientRect().top < window.innerHeight) {
             const _src = e.getAttribute('_src');
             if (_src) {
@@ -360,59 +433,91 @@
     })();
 
     //放大镜magnifier
+//    (() => {
+//      const picGoodsMin = listsGoods.querySelectorAll('.picGoods-min');
+//      const picGoods = listsGoods.querySelectorAll('.picGoods');
+//
+//      picGoodsMin.forEach((e, i) => {
+//        const target = e.nextElementSibling;
+//        e.addEventListener('mouseover', function () {
+//          target.style.display = 'block';
+//        });
+//        e.addEventListener('mouseout', function () {
+//          target.style.display = '';
+//        });
+//        e.addEventListener('mousemove', function (ev) {
+//          let l = ev.clientX - e.getBoundingClientRect().left - target.offsetWidth/2;
+//          let t = ev.clientY - e.getBoundingClientRect().top - target.offsetHeight/2;
+//          const maxL = e.clientWidth - target.offsetWidth;
+//          const maxT = e.clientHeight - target.offsetHeight;
+//          if (l <=0 ) {
+//            l = 0;
+//          }
+//          if (l >= maxL) {
+//            l = maxL;
+//          }
+//          if (t <=0 ) {
+//            t = 0;
+//          }
+//          if (t >= maxT) {
+//            t = maxT;
+//          }
+//          target.style.left = l + 'px';
+//          target.style.top = t + 'px';
+//
+//          let rateL = (ev.clientX - e.getBoundingClientRect().left) / e.clientWidth;
+//          let rateT = (ev.clientY - e.getBoundingClientRect().top) / e.clientHeight;
+//          let bL = picGoods[i].clientWidth*rateL - target.offsetWidth/2;
+//          let bT = picGoods[i].clientHeight*rateT - target.offsetHeight/2;
+////          if (bL <= target.offsetWidth/2) {
+////            bL = 0;
+////          }
+////          if (bL >= picGoodsBig[i].clientWidth - target.offsetWidth) {
+////            bL = picGoodsBig[i].clientWidth - target.offsetWidth
+////          }
+////          if (bT <= target.offsetHeight/2) {
+////            bT = 0;
+////          }
+////          if (bT >= picGoodsBig[i].clientHeight - target.offsetHeight) {
+////            bT = picGoodsBig[i].clientHeight - target.offsetHeight
+////          }
+//          picGoods[i].style.left = -bL + 'px';
+//          picGoods[i].style.top = -bT + 'px';
+//        });
+//      });
+//    })();
 
+    //进度条
     (() => {
-      const picGoodsMin = listsGoods.querySelectorAll('.picGoods-min');
-      const picGoods = listsGoods.querySelectorAll('.picGoods');
-
-      picGoodsMin.forEach((e, i) => {
-        const target = e.nextElementSibling;
-        e.addEventListener('mouseover', function () {
-          target.style.display = 'block';
-        });
-        e.addEventListener('mouseout', function () {
-          target.style.display = '';
-        });
-        e.addEventListener('mousemove', function (ev) {
-          let l = ev.clientX - e.getBoundingClientRect().left - target.offsetWidth/2;
-          let t = ev.clientY - e.getBoundingClientRect().top - target.offsetHeight/2;
-          const maxL = e.clientWidth - target.offsetWidth;
-          const maxT = e.clientHeight - target.offsetHeight;
-          if (l <=0 ) {
-            l = 0;
-          }
-          if (l >= maxL) {
-            l = maxL;
-          }
-          if (t <=0 ) {
-            t = 0;
-          }
-          if (t >= maxT) {
-            t = maxT;
-          }
-          target.style.left = l + 'px';
-          target.style.top = t + 'px';
-
-          let rateL = (ev.clientX - e.getBoundingClientRect().left) / e.clientWidth;
-          let rateT = (ev.clientY - e.getBoundingClientRect().top) / e.clientHeight;
-          let bL = picGoods[i].clientWidth*rateL - target.offsetWidth/2;
-          let bT = picGoods[i].clientHeight*rateT - target.offsetHeight/2;
-//          if (bL <= target.offsetWidth/2) {
-//            bL = 0;
-//          }
-//          if (bL >= picGoodsBig[i].clientWidth - target.offsetWidth) {
-//            bL = picGoodsBig[i].clientWidth - target.offsetWidth
-//          }
-//          if (bT <= target.offsetHeight/2) {
-//            bT = 0;
-//          }
-//          if (bT >= picGoodsBig[i].clientHeight - target.offsetHeight) {
-//            bT = picGoodsBig[i].clientHeight - target.offsetHeight
-//          }
-          picGoods[i].style.left = -bL + 'px';
-          picGoods[i].style.top = -bT + 'px';
-        });
+      const timeLine = document.querySelector('#timeLine');
+      window.addEventListener('scroll', function () {
+        let rate = document.documentElement.scrollTop / (document.documentElement.scrollHeight - window.innerHeight) * 100 + '%';
+        timeLine.style.background = `linear-gradient(90deg, rgba(33,163,213,.6) ${rate}, transparent ${rate})`;
       });
+    })();
+
+    //回到顶部
+    (() => {
+      const backTop = document.querySelector('#back-top');
+      window.addEventListener('scroll', function () {
+        if (document.documentElement.scrollTop > window.innerHeight * 1.4) {
+          backTop.style.display = 'block';
+        } else {
+          backTop.style.display = '';
+        }
+      });
+    })();
+
+    //效果banner
+    (() => {
+      const dataBanner = ['banner0', 'banner1', 'banner2', 'banner3'];
+      const banner = document.querySelector('.banner');
+      let n = 0;
+      banner.className = 'autoWidth banner banner0';
+      setInterval(() => {
+        banner.className = 'autoWidth banner';
+        banner.classList.add(dataBanner[++n % dataBanner.length]);
+      }, 6000)
     })();
 
   </script>
