--- a/html/order.html
+++ b/html/order.html
@@ -178,9 +178,9 @@
   <script src="../js/common.js"></script>
   <script>
 
-    dataCarts = JSON.parse(localStorage.getItem('dataCarts')) || dataCarts;
-    dataOrders = JSON.parse(localStorage.getItem('dataOrders')) || dataOrders;
-    isCart(dataCarts);
+    let dataNow = JSON.parse(localStorage.getItem('dataNow')) || {};
+//    console.log(dataUsers);
+    isCart(dataNow.carts);
 
     const content = document.querySelector('.content');
     const listsOrders = content.querySelector('.content ul.listsOrders');
@@ -188,7 +188,7 @@
     const pageSelect = content.querySelector('.content div.page select.pageSelect');
     const pagePrev = content.querySelectorAll('.content div.page a')[0];
     const pageNext = content.querySelectorAll('.content div.page a')[1];
-    let len = dataOrders.length;
+    let len = dataNow.orders.length;
 
     //hash
     (() => {
@@ -200,23 +200,23 @@
           let start = 4 * (p - 1);
           let end = start + 4;
           if (end >= len) end = len;
-          let dataTmps = dataOrders.slice(start, end);
+          let dataTmps = dataNow.orders.slice(start, end);
           let str = '';
           for (let n = 0, i = start; i < end; n++, i++) {
             str += `
             <li>
               <dl>
-                <dt><img src="${dataOrders[i].pic_min}" /></dt>
+                <dt><img src="${dataNow.orders[i].pic_min}" /></dt>
                 <dd>
                   <div>
-                    <h5>${dataOrders[i].name}</h5>
-                    <i>RMB ${dataOrders[i].price}</i>
-                    <span>${dataOrders[i].num}</span>
-                    <b class="order-ePrice">RMB ${dataOrders[i].sumPrice}</b>
+                    <h5>${dataNow.orders[i].name}</h5>
+                    <i>RMB ${dataNow.orders[i].price}</i>
+                    <span>${dataNow.orders[i].num}</span>
+                    <b class="order-ePrice">RMB ${dataNow.orders[i].sumPrice}</b>
                   </div>
                   <p>
-                    <span>订单号: ${dataOrders[i].serial_num}</span>
-                    <i>${dataOrders[i].date[0]}/${dataOrders[i].date[1]}/${dataOrders[i].date[2]}</i>
+                    <span>订单号: ${dataNow.orders[i].serial_num}</span>
+                    <i>${dataNow.orders[i].date[0]}/${dataNow.orders[i].date[1]}/${dataNow.orders[i].date[2]}</i>
                   </p>
                 </dd>
               </dl>
@@ -227,7 +227,6 @@
 
           (function () {
             const orderEPrices = listsOrders.querySelectorAll('.order-ePrice');
-//            console.log(dataTmps);
             dataTmps.forEach((e, i) => {
               orderEPrices[i].innerHTML = `RMB ${e.price * e.num}`;
             });
