--- a/index.html
+++ b/index.html
@@ -90,26 +90,26 @@
       height: 110%;
       transform: translateX(-5%);
     }
-    section ul li dl dt span {
-      /*z-index: 1;*/
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: none;
-      width: 40%;
-      height: 40%;
-      overflow: hidden;
-      /*border: 4px solid #0f0;*/
-    }
-    section ul li dl dt span img.picGoods {
-      position: absolute;
-      top: 0;
-      left: 0;
+    /*section ul li dl dt span {*/
+      /*!*z-index: 1;*!*/
+      /*position: absolute;*/
+      /*top: 0;*/
+      /*left: 0;*/
       /*display: none;*/
-      width: 800%;
-      height: 800%;
-      /*border: 1px solid #ccc;*/
-    }
+      /*width: 40%;*/
+      /*height: 40%;*/
+      /*overflow: hidden;*/
+      /*!*border: 4px solid #0f0;*!*/
+    /*}*/
+    /*section ul li dl dt span img.picGoods {*/
+      /*position: absolute;*/
+      /*top: 0;*/
+      /*left: 0;*/
+      /*!*display: none;*!*/
+      /*width: 800%;*/
+      /*height: 800%;*/
+      /*!*border: 1px solid #ccc;*!*/
+    /*}*/
     section ul li dl dd {
       display: flex;
       flex-direction: column;
@@ -268,36 +268,31 @@
   <script>
 
     dataUsers = JSON.parse(localStorage.getItem('dataUsers')) || dataUsers;
-    dataCarts = JSON.parse(localStorage.getItem('dataCarts')) || dataCarts;
-    isCart(dataCarts);
-//    console.log(dataUsers);
+    let dataNow = JSON.parse(localStorage.getItem('dataNow')) || {};
+
     const section = document.querySelector('section');
     const listsGoods = section.querySelector('ul');
     const account = document.querySelector('#account');
 
-    //是否已登录
-    for (let e of dataUsers) {
-      if (e.isLogin) {
+    (() => {
+      isCart(dataNow.carts);
+      if (dataNow.isLogin) {
         account.innerText = '退出';
-        break;
       }
-    }
+    })();
 
     (() => {
       //登录,退出
       account.addEventListener('click', function () {
-        const text = account.innerText;
-        if (text === '登录') {
+        if (!dataNow.isLogin) {
           login.style.display = 'block';
-        } else if (text === '退出') {
-          for (let e of dataUsers) {
-            if (e.isLogin) {
-              e.isLogin = false;
-              account.innerText = '登录';
-              localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
-              break;
-            }
-          }
+        } else {
+          account.innerText = '登录';
+          dataNow.isLogin = false;
+          dataNow = {};
+          isCart(dataNow.carts);
+          localStorage.removeItem('dataNow');
+          localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
         }
       });
 
@@ -322,24 +317,35 @@
         const registerSure = document.querySelector('.register .register-sure');
         const loginSure = document.querySelector('.login .login-sure');
         registerSure.addEventListener('click', function () {
-          const sData = {
-            id: +new Date(),
-            email: registerSure.previousElementSibling.previousElementSibling.value,
-            password: registerSure.previousElementSibling.value,
-            isLogin: false
-          };
-          dataUsers.push(sData);
-          localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
-          loginChange(register, login);
+          const email = registerSure.previousElementSibling.previousElementSibling.value;
+          const password = registerSure.previousElementSibling.value;
+          if (!dataUsers.some(e => email === e.email)) {
+            const sData = {
+              userId: +new Date(),
+              email: email,
+              password: password,
+              isLogin: false,
+              carts: [],
+              orders: []
+            };
+            dataUsers.unshift(sData);
+//            console.log(dataUsers);
+            localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
+            loginChange(register, login);
+          }
         });
         loginSure.addEventListener('click', function () {
           const email = loginSure.previousElementSibling.previousElementSibling.value;
           const password = loginSure.previousElementSibling.value;
           for (let e of dataUsers) {
             if (e.email === email && e.password === password) {
-              e.isLogin = true;
+//              localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
               login.style.display = 'none';
               account.innerText = '退出';
+              e.isLogin = true;
+              dataNow = e;
+              isCart(dataNow.carts);
+              localStorage.setItem('dataNow', JSON.stringify(dataNow));
               localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
               break;
             }
@@ -366,7 +372,8 @@
         str += `
           <li>
           <dl>
-            <dt><img _src="${e.pic_min}" class="picGoods-min" /><span><img _src="${e.pic}" class="picGoods" /></span></dt>
+            <dt><img _src="${e.pic_min}" class="picGoods-min" /></dt>
+            <!--<dt><img _src="${e.pic_min}" class="picGoods-min" /><span><img _src="${e.pic}" class="picGoods" /></span></dt>-->
             <dd>
               <em style="display: none">${e.id}</em>
               <span>${e.name}</span>
@@ -393,7 +400,7 @@
               sData = JSON.parse(JSON.stringify(e));
             }
           });
-          dataCarts.forEach(e => {
+          dataNow.carts.forEach(e => {
             if (e.id === sData.id) {
               e.num++;
               isInclude = true;
@@ -402,10 +409,11 @@
           if (!isInclude) {
             sData.num = 1;
             sData.pic_min = path + sData.pic_min;
-            dataCarts.unshift(sData);
+            dataNow.carts.unshift(sData);
           }
-          isCart(dataCarts);
-          localStorage.setItem('dataCarts', JSON.stringify(dataCarts));
+          isCart(dataNow.carts);
+          localStorage.setItem('dataNow', JSON.stringify(dataNow));
+          localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
         });
       });
     }
@@ -413,10 +421,10 @@
     //懒加载
     (() => {
       const picGoodsMin = listsGoods.querySelectorAll('.picGoods-min');
-      const picGoods = listsGoods.querySelectorAll('.picGoods');
+//      const picGoods = listsGoods.querySelectorAll('.picGoods');
       let Lazyloading = function () {
         lazyLoading(picGoodsMin);
-        lazyLoading(picGoods);
+//        lazyLoading(picGoods);
       };
       window.addEventListener('scroll', Lazyloading);
       function lazyLoading(eles) {
